Newest at the top
YYYY-MM-DD HR:MIN - comment

2016-03-28 17:12 - Finished the timeslots facet 
2016-03-28 16:19 - Changed according to the validation error (regex for both room and courseCode)
2016-03-28 14:10 - Created courses facet schema
2016-03-27 14:00 - Added min and max time restriction in the schema
2016-03-27 13:52 - Changed the reg-ex for course code
2016-03-27 13:48 - Changed weekday names to full weekday names and changed master to timetable.xml
2016-03-24 17:27 - Created days facet and updated master.xml
2016-03-24 15:04 - Instructor element added
2016-03-24 14:52 - data type for person is created
2016-03-24 14:51 - Added the room types to schema definition
2016-03-24 14:21 - Started some data types
2016-03-24 14:07 - Initial setup