@@ -1,19 +1,7 @@
-<table style="border:solid;">
-	<tr>
-		<td><b>Course: </b></td>
-		<td>{courseCode} {courseType} </td>
-	</tr>
-	<tr>
-		<td><b>Day: </b></td>
-		<td>{weekday} - {timeslot} </td>
-	</tr>
-	<tr>
-		<td><b>Instructor: </b></td>
-		<td>{instructor} </td>
-	</tr>
-	<tr>
-		<td><b>Room: </b></td>
-		<td>{room}</td>
-	</tr>
-</table>
-</br>
+<tr>
+	<td>{courseCode} - {courseType}</td>
+	<td>{weekday}</td>
+	<td>{start} to {end}</td>
+	<td>{instructor}</td>
+	<td>{room}</td>
+</tr>
