@@ -1,6 +1,8 @@
 Newest at the top
 YYYY-MM-DD HR:MIN - comment
 
+2016-03-28 17:54 - Local Validation passed
+2016-03-28 17:45 - Changed each booking to be a table instead each row being a table
 2016-03-28 17:12 - Finished the timeslots facet 
 2016-03-28 16:19 - Changed according to the validation error (regex for both room and courseCode)
 2016-03-28 14:10 - Created courses facet schema
